Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble with the code? Let me us via <a href="mailto:j.fang@tudelft.nl">j.fang@tudelft.nl</a>.</p>
+<p>Having trouble with the code? Let us know via <a href="mailto:j.fang@tudelft.nl">j.fang@tudelft.nl</a>.</p>
       </section>
     </div>
 
